# marimo

./: .gitattributes  .marimo.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  _typos.toml  demo.sh  prek.toml  pyproject.toml
.forgejo/workflows/: deploy.yml
.github/: README.md
.github/scripts/: build.py  zenodo_upload_frozen.py
.github/workflows/: deploy.yml
apps/: bayesian_chemotaxonomic_profiler.py  charts.py  lotus_exporter.py  lotus_pubchem_tree.py  lotus_wikidata_explorer.py  lotus_wikidata_explorer_2.py  lotus_wikidata_explorer_ios.py  mols.py  my_testing_app.py  remote_demo.py  remote_import_demo.py  test_app.py  wikidata_connector.py
apps/lotus_wikidata_explorer_modules/core/: __init__.py  config.py  constants.py  models.py  utils.py
apps/lotus_wikidata_explorer_modules/data/: __init__.py  filters.py  processor.py  transforms.py
apps/lotus_wikidata_explorer_modules/export/: __init__.py  formats.py  metadata.py  rdf.py
apps/lotus_wikidata_explorer_modules/query/: __init__.py  builders.py  executor.py  validation.py
apps/lotus_wikidata_explorer_modules/ui/: __init__.py  helpers.py  state.py  taxon_resolver.py
apps/public/: custom.css  dokieli.html  head.html
apps/public/classyfire/: classyfire_cache.csv
apps/public/mortar/: Fragments_Ertl_algorithm.csv
apps/public/npclassifier/: npclassifier_cache.csv  npclassifier_cache.json
modules/: __init__.py
modules/chem/: __init__.py  rdkit_utils.py
modules/chem/cdk/: __init__.py
modules/chem/indigo/: __init__.py  indigo_instance.py
modules/chem/rdkit/: __init__.py  find_mcs_smarts.py  render_with_highlights.py
modules/data/filter/: __init__.py  by_values.py  formula.py  mass.py  range.py  year.py
modules/df/: filters.py  transforms.py
modules/html/: tags.py  urls.py
modules/io/compress/: __init__.py  if_large.py
modules/knowledge/: __init__.py
modules/knowledge/rdf/: __init__.py
modules/knowledge/wikidata/: __init__.py
modules/net/: __init__.py
modules/net/sparql/: __init__.py  client.py  execute_with_retry.py  parse_response.py  values_clause.py
modules/rdf/: graph.py  namespaces.py
modules/sparql/: builders.py  client.py  retry.py
modules/stats/bayesian/: __init__.py  (+2 more)
modules/text/: __init__.py  formula.py  smiles.py  strings.py
modules/ui/: html_from_image.py
modules/utils/: colors.py
modules/wikidata/: qid.py  urls.py
notebooks/: fibonacci.py  mcs_cxsmiles_demo.py  npclassifier.py  penguins.py
src/: foo.py
src/adafede_marimo/: foo.py
src/adafedemarimo/: __init__.py  foo.py
templates/: README.md  index.html.j2  tailwind.html.j2
(+126 files in other folders)
