[project]
name = "adafedemarimo"
version = "0.1.0"
description = "Minimal, reusable utilities for marimo applications"
requires-python = ">=3.13"
dependencies = [
 "aiohttp>=3.13.3",
  "altair>=6.0.0",
  "cmcrameri>=1.9",
  "epam-indigo>=1.36.1",
  "fsspec>=2026.1.0",
  "marimo>=0.19.6",
  "numpy>=2.4.1",
  "polars>=1.37.1",
  "pyarrow>=23.0.0",
  "pydantic-ai>=1.47.0",
  "rdflib>=7.5.0",
  "rdkit>=2025.9.3",
  "requests>=2.32.5",
  "scipy>=1.17.0",
  "simple-parsing>=0.1.8",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.9.0.post1",
]

[project.scripts]
lotus_wikidata_explorer = "apps.lotus_wikidata_explorer:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
]

[tool.setuptools.packages.find]

[tool.ty.rules]
unresolved-import = "ignore"
