[project]
name = "adafedemarimo"
version = "0.1.0"
description = "Minimal, reusable utilities for marimo applications"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.13.3",
  "altair>=6.0.0",
  "cmcrameri>=1.9",
  "epam-indigo>=1.40.0",
  "fsspec>=2026.2.0",
  "maplib>=0.19.24",
  "marimo>=0.21.1",
  "networkx>=3.6.1",
  "numpy>=2.4.3",
  "polars>=1.39.2",
  "pyarrow>=23.0.1",
  "pydantic-ai>=1.70.0",
  "rdflib>=7.1.0",
  "rdkit>=2025.9.6",
  "requests>=2.32.5",
  "scipy>=1.17.1",
  "simple-parsing>=0.1.8",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.9.0.post1",
]

[project.scripts]
lotus_wikidata_explorer = "apps.lotus_wikidata_explorer:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
]

[tool.setuptools.packages.find]

[tool.ty.rules]
unresolved-import = "ignore"
