[project]
name = "adafedemarimo"
version = "0.1.0"
description = "Minimal, reusable utilities for marimo applications"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.13.5",
  "altair>=6.0.0",
  "cmcrameri>=1.9",
  "epam-indigo>=1.40.0",
  "fsspec>=2026.3.0",
  "maplib>=0.20.10",
  "marimo>=0.23.1",
  "matchms>=0.21.1",
  "networkx>=3.6.1",
  "numpy>=2.4.4",
  "polars>=1.40.0",
  "pyarrow>=23.0.1",
  "pydantic-ai>=1.84.1",
  "rdflib>=7.6.0",
  "rdkit>=2026.3.1",
  "requests>=2.33.1",
  "scipy>=1.17.1",
  "simple-parsing>=0.1.8",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.9.0.post1",
]

[project.scripts]
lotus_wikidata_explorer = "apps.lotus_wikidata_explorer:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
]

[tool.deptry]
package_module_name_map = { "epam-indigo" = "indigo" }

[tool.setuptools.packages.find]

[tool.ty.rules]
unresolved-import = "ignore"
